# Hacktoberfest-2024-AIML

./: README.md
from_scratch/: README.md
from_scratch/RNN/: rnn.ipynb
from_scratch/Transformer/: transformer.ipynb
image_gen/: Forest_Fire_Detection.ipynb  README.md
nlp/: README.md
nlp/all-the-rag-you-will-ever-need/: .gitignore  README.md  pyproject.toml
nlp/all-the-rag-you-will-ever-need/src/: demo.py  rag_tools.py  test.py  vector_store.py
